crates/postgres-subsystem/postgres-model-builder/src/snapshots/postgres_model_builder__resolved_builder__tests__with_annotations.snap
---
source: crates/postgres-subsystem/postgres-model-builder/src/resolved_builder.rs
expression: resolved
---
values:
  - - ~
    - Primitive: Boolean
  - - ~
    - Primitive: Int
  - - ~
    - Primitive: Float
  - - ~
    - Primitive: Decimal
  - - ~
    - Primitive: String
  - - ~
    - Primitive: LocalTime
  - - ~
    - Primitive: LocalDateTime
  - - ~
    - Primitive: LocalDate
  - - ~
    - Primitive: Instant
  - - ~
    - Primitive: Json
  - - ~
    - Primitive: Blob
  - - ~
    - Primitive: Uuid
  - - ~
    - Primitive: Exograph
  - - ~
    - Primitive: ExographPriv
  - - ~
    - Primitive:
        Interception: Operation
  - - ~
    - Composite:
        name: Concert
        plural_name: Concerts
        fields:
          - name: id
            typ:
              Plain:
                type_name: Int
                is_primitive: true
            column_name: custom_id
            self_column: true
            is_pk: true
            type_hint:
              Explicit:
                dbtype: BIGINT
            unique_constraints: []
            default_value: AutoIncrement
          - name: title
            typ:
              Plain:
                type_name: String
                is_primitive: true
            column_name: custom_title
            self_column: true
            is_pk: false
            type_hint:
              String:
                max_length: 12
            unique_constraints: []
            default_value: ~
          - name: venue
            typ:
              Plain:
                type_name: Venue
                is_primitive: false
            column_name: custom_venue_id
            self_column: true
            is_pk: false
            type_hint: ~
            unique_constraints: []
            default_value: ~
          - name: reserved
            typ:
              Plain:
                type_name: Int
                is_primitive: true
            column_name: reserved
            self_column: true
            is_pk: false
            type_hint:
              Int:
                bits: ~
                range:
                  - 0
                  - 300
            unique_constraints: []
            default_value: ~
          - name: time
            typ:
              Plain:
                type_name: Instant
                is_primitive: true
            column_name: time
            self_column: true
            is_pk: false
            type_hint:
              DateTime:
                precision: 4
            unique_constraints: []
            default_value: ~
          - name: price
            typ:
              Plain:
                type_name: Decimal
                is_primitive: true
            column_name: price
            self_column: true
            is_pk: false
            type_hint:
              Decimal:
                precision: 10
                scale: 2
            unique_constraints: []
            default_value: ~
        table_name: custom_concerts
        access:
          creation:
            BooleanLiteral:
              - false
          read:
            BooleanLiteral:
              - false
          update:
            BooleanLiteral:
              - false
          delete:
            BooleanLiteral:
              - false
  - - ~
    - Composite:
        name: Venue
        plural_name: Venuess
        fields:
          - name: id
            typ:
              Plain:
                type_name: Int
                is_primitive: true
            column_name: custom_id
            self_column: true
            is_pk: true
            type_hint: ~
            unique_constraints: []
            default_value: AutoIncrement
          - name: name
            typ:
              Plain:
                type_name: String
                is_primitive: true
            column_name: custom_name
            self_column: true
            is_pk: false
            type_hint: ~
            unique_constraints: []
            default_value: ~
          - name: concerts
            typ:
              List:
                Plain:
                  type_name: Concert
                  is_primitive: false
            column_name: custom_venue_id
            self_column: false
            is_pk: false
            type_hint: ~
            unique_constraints: []
            default_value: ~
          - name: capacity
            typ:
              Plain:
                type_name: Int
                is_primitive: true
            column_name: capacity
            self_column: true
            is_pk: false
            type_hint:
              Int:
                bits: 16
                range: ~
            unique_constraints: []
            default_value: ~
          - name: latitude
            typ:
              Plain:
                type_name: Float
                is_primitive: true
            column_name: latitude
            self_column: true
            is_pk: false
            type_hint:
              Float:
                bits: 24
            unique_constraints: []
            default_value: ~
        table_name: venues
        access:
          creation:
            BooleanLiteral:
              - false
          read:
            BooleanLiteral:
              - false
          update:
            BooleanLiteral:
              - false
          delete:
            BooleanLiteral:
              - false
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
map:
  Blob:
    index: 10
    generation: ~
  Boolean:
    index: 0
    generation: ~
  Concert:
    index: 15
    generation: ~
  Decimal:
    index: 3
    generation: ~
  Exograph:
    index: 12
    generation: ~
  ExographPriv:
    index: 13
    generation: ~
  Float:
    index: 2
    generation: ~
  Instant:
    index: 8
    generation: ~
  Int:
    index: 1
    generation: ~
  Json:
    index: 9
    generation: ~
  LocalDate:
    index: 7
    generation: ~
  LocalDateTime:
    index: 6
    generation: ~
  LocalTime:
    index: 5
    generation: ~
  Operation:
    index: 14
    generation: ~
  String:
    index: 4
    generation: ~
  Uuid:
    index: 11
    generation: ~
  Venue:
    index: 16
    generation: ~

